Modifico estilo de la pantalla izquierda

--- a/css/index.css
+++ b/css/index.css
@@ -360,6 +360,13 @@ section {
   section {
     max-width: 400px;
   }
+  .left .search button {
+    font-size: 0.9rem;
+  }
+  .left .screen-left {
+    width: 270px;
+    height: 200px;
+  }
   .right {
     margin-top: 0;
   }
