--- a/css/index.css
+++ b/css/index.css
@@ -234,6 +234,8 @@ body {
   background-image: url(../img/backgrpund-image.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100vh;
+  width: 100wv;
 }
 
 section {
@@ -282,7 +284,7 @@ section {
   border-bottom: 40px solid #D1D5CB;
   background-color: #545358;
   width: 300px;
-  height: 220px;
+  height: 240px;
   border-radius: 10px;
   box-shadow: -2px 2px 3px black;
 }
@@ -351,7 +353,7 @@ section {
   border: 1px solid #343a40;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 800px) {
   body {
     overflow-x: scroll;
     display: inline;
@@ -359,13 +361,13 @@ section {
   }
   section {
     max-width: 400px;
+    min-width: 375px;
   }
-  .left .search button {
-    font-size: 0.9rem;
+  .left .search button span {
+    display: none;
   }
   .left .screen-left {
     width: 270px;
-    height: 200px;
   }
   .right {
     margin-top: 0;
