--- a/css/index.css
+++ b/css/index.css
@@ -45,7 +45,7 @@
   background-color: rgb(94, 190, 94);
 }
 .left .blue-led {
-  background-color: #0BCDFF;
+  background-color: #0096c7;
   width: 50px;
   height: 50px;
   border-radius: 30px;
@@ -56,7 +56,7 @@
   box-shadow: -2px 2px 3px black;
 }
 .left .blue-led .dot {
-  background-color: #9CE8FF;
+  background-color: #48cae4;
   width: 20px;
   height: 20px;
   border-radius: 10px;
@@ -113,20 +113,35 @@
 }
 .left .direction-buttons {
   position: relative;
-  margin-top: -40px;
+  margin-top: -50px;
+  left: 55%;
   display: grid;
-  justify-content: flex-end;
-  right: 20px;
-  grid-template-columns: 55px 55px 55px;
+  grid-template-columns: 54px 55px 54px;
 }
 .left .direction-buttons #left {
   position: sticky;
+  font-size: 56px;
+}
+.left .direction-buttons #center {
+  align-self: center;
+  margin-top: 1px;
+  background-color: black;
+  position: sticky;
+  height: 60px;
 }
 .left .direction-buttons i {
   font-size: 3.4rem;
-  background-color: #212529;
-  box-shadow: -3px 3px 1px #343a40;
+  background-color: #02040f;
+  color: #212529;
+  border-radius: 10px;
+  box-shadow: -5px 5px 5px black;
+  padding: 0;
+}
+.left .direction-buttons i:hover {
   cursor: pointer;
+}
+.left .direction-buttons i:active {
+  box-shadow: -1px 1px 1px black;
 }
 .left .direction-buttons div {
   text-align: center;
